NATTQA-ENV/force-app/main/default/objects/User/fields/CONTAINER_LN_Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_LN_Sales_Rep_Code__c</fullName>
    <label>LN Sales Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>