NATTQA-ENV/force-app/main/default/objects/User/fields/CTBR_Internal__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTBR Internal</label>
    <type>Checkbox</type>
</CustomField>