NATTQA-ENV/force-app/main/default/objects/User/fields/CTM_Dealer_Region_1__c.field-meta.xml
<CustomField>
    <fullName>CTM_Dealer_Region_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CTM Dealer Region 1 - Mexico</description>
    <label>CTM Dealer Region 1</label>
    <type>Checkbox</type>
</CustomField>