NATTQA-ENV/force-app/main/default/objects/User/fields/CTM_Dealer_Region_2__c.field-meta.xml
<CustomField>
    <fullName>CTM_Dealer_Region_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CTM Dealer Region 2 - Central America and Caribbean</description>
    <label>CTM Dealer Region 2</label>
    <type>Checkbox</type>
</CustomField>