NATTQA-ENV/force-app/main/default/objects/User/fields/CTM_Dealer_Region_3__c.field-meta.xml
<CustomField>
    <fullName>CTM_Dealer_Region_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CTM Dealer Region 3 - South America</description>
    <label>CTM Dealer Region 3</label>
    <type>Checkbox</type>
</CustomField>