NATTQA-ENV/force-app/main/default/objects/User/fields/CTM_Internal__c.field-meta.xml
<CustomField>
    <fullName>CTM_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assign to CTM Internal</description>
    <label>CTM Internal</label>
    <type>Checkbox</type>
</CustomField>