NATTQA-ENV/force-app/main/default/objects/User/fields/Default_List_Price_Country__c.field-meta.xml
<CustomField>
    <fullName>Default_List_Price_Country__c</fullName>
    <label>Default List Price Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Manufacturing Plant</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>REFRITRANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>