NATTQA-ENV/force-app/main/default/objects/User/fields/Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>Federation_ID__c</fullName>
    <formula>FederationIdentifier</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Federation ID</label>
    <type>Text</type>
</CustomField>