NATTQA-ENV/force-app/main/default/objects/User/fields/NATT_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_DBA_Name__c</fullName>
    <description>test</description>
    <formula>Contact.Account.NATT_D_B_A_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DBA Name</label>
    <type>Text</type>
</CustomField>