NATTQA-ENV/force-app/main/default/objects/User/fields/NATT_Dealer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Dealer</label>
    <type>Checkbox</type>
</CustomField>