NATTQA-ENV/force-app/main/default/objects/User/fields/NATT_Dealer_Principal__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Dealer Principal</label>
    <type>Checkbox</type>
</CustomField>