NATTQA-ENV/force-app/main/default/objects/User/fields/NATT_Inactive_Contact__c.field-meta.xml
<CustomField>
    <fullName>NATT_Inactive_Contact__c</fullName>
    <formula>IF(AND(NOT(ISNULL(ContactId)),Contact.NATT_Record_Type_Developer_Name__c = &apos;NATT_Inactive_Contact&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Contact</label>
    <type>Checkbox</type>
</CustomField>