NATTQA-ENV/force-app/main/default/objects/User/fields/NATT_JDE_Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Sales_Rep_Code__c</fullName>
    <description>NATT - use to store the JDE sales rep code (manual entry for now)</description>
    <label>JDE Sales Rep Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>