NATTQA-ENV/force-app/main/default/objects/User/fields/NATT_Lynx_Fleet__c.field-meta.xml
<CustomField>
    <fullName>NATT_Lynx_Fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lynx Fleet</label>
    <type>Checkbox</type>
</CustomField>