NATTQA-ENV/force-app/main/default/objects/User/fields/NATT_Whos_Who__c.field-meta.xml
<CustomField>
    <fullName>NATT_Whos_Who__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Who&apos;s Who</label>
    <type>Checkbox</type>
</CustomField>