NATTQA-ENV/force-app/main/default/objects/User/fields/UCP_Region__c.field-meta.xml
<CustomField>
    <fullName>UCP_Region__c</fullName>
    <label>UCP Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>SG/HK</fullName>
            </value>
            <value>
                <fullName>UCP (Global)</fullName>
                <isActive>false</isActive>
                <label>UCP (Global)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>