NATTQA-ENV/force-app/main/default/objects/User/fields/User_Account__c.field-meta.xml
<CustomField>
    <fullName>User_Account__c</fullName>
    <description>This field is used for Reporting purpose.</description>
    <formula>Contact.AccountId</formula>
    <label>User Account</label>
    <type>Text</type>
</CustomField>