NATTQA-ENV/force-app/main/default/objects/User/listViews/All_CTBR_Users.listView-meta.xml
<ListView>
    <fullName>All_CTBR_Users</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>TIMEZONE</columns>
    <columns>LOCALE</columns>
    <columns>LANGUAGE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>CTBR</value>
    </filters>
    <label>CTBR Usuários</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>