NATTQA-ENV/force-app/main/default/objects/User/listViews/CTM_Dealers_Region_1.listView-meta.xml
<ListView>
    <fullName>CTM_Dealers_Region_1</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>CTM Región 1 Distribuidor</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>CTM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>