NATTQA-ENV/force-app/main/default/objects/User/listViews/CTM_Dealers_Region_3.listView-meta.xml
<ListView>
    <fullName>CTM_Dealers_Region_3</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CTM_Dealer_Region_3__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CTM Región 3 Distribuidor</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>CTM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>