NATTQA-ENV/force-app/main/default/objects/User/listViews/Integration_User_Ids.listView-meta.xml
<ListView>
    <fullName>Integration_User_Ids</fullName>
    <booleanFilter>(1 OR 2 or 4) AND 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Boomi</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>Integration</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>Container</value>
    </filters>
    <label>Integration User Ids</label>
    <language>en_US</language>
</ListView>