NATTQA-ENV/force-app/main/default/objects/User/listViews/NATT_Partner_Users.listView-meta.xml
<ListView>
    <fullName>NATT_Partner_Users</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>SALES.CONTACT.NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NATT Parts Only Community</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NATT Sales Only Community</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NATT Parts and Service Community</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NATT Warranty Only Community</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NATT Technical Community</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NATT Full Access Community</value>
    </filters>
    <label>NATT Partner Users - Dealers</label>
    <language>en_US</language>
    <sharedTo>
        <group>NATT_Internal</group>
    </sharedTo>
</ListView>