NATTQA-ENV/force-app/main/default/objects/User/listViews/NATT_Partner_Users_Associates.listView-meta.xml
<ListView>
    <fullName>NATT_Partner_Users_Associates</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>SALES.CONTACT.NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NATT Associate With Tavant Community</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>NATT Associate Without Tavant Community</value>
    </filters>
    <label>NATT Partner Users - Associates</label>
    <language>en_US</language>
    <sharedTo>
        <group>NATT_Internal</group>
    </sharedTo>
</ListView>